# socialnetwork-rs

./: Anchor.toml
migrations/: deploy.ts
programs/socialnetwork-rs/: Cargo.toml
programs/socialnetwork-rs/src/: errors.rs  events.rs  instructions.rs  lib.rs  state.rs
tests/: socialnetwork-rs.ts
